# potato

./: .bandit  .coveragerc  .env.example  .flake8  .format-check  .gitattributes  .gitconfig  .gitignore  .pre-commit-config.yaml  .safety-policy.json  .secrets.baseline  .semgrepignore  =9.0.0  API_SECURITY_ASSESSMENT.md  BRANCH_MERGE_STEPS.md  BRANCH_PROTECTION_RULES.md  BUG_FIXES_SUMMARY.md  CHANGELOG.md  CHANGELOG_v2.1.0.md  CICD_OPTIMIZATION_KICKOFF.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_ISSUES_LOG.md  CI_CD_LEARNING_PLAN.md  CI_CD_SETUP_GUIDE.md  CLAUDE.md  CLEANUP_REPORT.md  COMMANDS.md  COMPREHENSIVE_TEST_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SYSTEM.md  DEV_WORKFLOWS_ENHANCEMENT_PLAN.md  Dockerfile  ENTERTAINMENT_GUIDE.md  HOSTING_README.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_v2.2_MULTI_BOT.md  Makefile  NEXT_DEVELOPMENT_PLAN.md  NEXT_PHASE_CICD_OPTIMIZATION.md  NEXT_PHASE_DEVELOPMENT_PLAN.md  (+81 more)
.github/: BRANCH_PROTECTION_POLICY.md  TRIGGER_CI.md  sync-config.yml
.github/scripts/: classify-changes.py  classify_changes.py  code-quality-check.sh  production-compliance-check.sh  security-scan.sh  verify_bot_health.py  workflow-dependency-check.py
.github/workflows/: auto-merge-dev-to-main.yml  auto-merge-dev-to-main.yml.disabled  auto-merge-to-main.yml  auto-merge.yml  auto-status-checks.yml  auto-sync-ptero.yml  branch-protection.yml  build-validation.yml  ci-pipeline.yml  ci.yml  code-quality.yml  deploy-simplified.yml  deploy-to-hosting.yml  deploy-to-production.yml  deploy-to-ptero.yml  deployment-monitor.yml  dynamic-matrix-optimization.yml  emergency-ptero-rollback.yml  emergency-rollback.yml  enhanced-auto-status-checks.yml  enhanced-caching.yml  failure-recovery.yml  final-integration-validation.yml  intelligent-caching.yml  intelligent-merge.yml  intelligent-orchestrator.yml  intelligent-skip-enhancement.yml  lightweight-ci.yml  main-branch-protection.yml  optimized-ci.yml  parallel-execution-optimization.yml  performance-monitoring-dashboard.yml  performance-monitoring.yml  phase1-integration-testing.yml  pr-compliance-check.yml  pull-request-checks.yml  push-to-ptero.yml  security-scans.yml  smart-auto-merge.yml  smart-change-detection.yml  (+3 more)
.github/workflows-backup/: build-validation.yml  code-quality.yml  smart-change-detection.yml
api/: __init__.py  analytics_routes.py  auth_routes.py  main.py  simple_main.py  ticket_routes.py
api/middleware/: __init__.py  auth_middleware.py
backend/: main.py
bot/: main.py
bot/api/: __init__.py  app.py  auth.py  models.py  realtime_api.py
bot/cogs/: ai_assistant_cog.py  ai_assistant_core.py  ai_core.py  auto_update_commands.py  auto_updater.py  automation_core.py  cached_ticket_core.py  content_analysis_cog.py  content_analysis_core.py  cross_platform_economy_core.py  dashboard_core.py  entertainment_core.py  fallback_commands.py  game_core.py  game_entertainment.py  guild_management_core.py  image_tools_cog.py  image_tools_core.py  language_core.py  lottery_core.py  menu_core.py  minecraft_core.py  minecraft_events.py  music_cog.py  music_core.py  security_admin_core.py  security_core.py  system_admin.py  system_admin_core.py  ticket.py  ticket_batch.py  ticket_core.py  ticket_listener.py  vote.py  vote_core.py  vote_listener.py  web_auth.py  web_auth_core.py  webhook_core.py  welcome_core.py  (+2 more)
bot/commands/: debug_github_token.py
bot/db/: ai_dao.py  archive_dao.py  assignment_dao.py  automation_dao.py  base_dao.py  cached_ticket_dao.py  connection.py  database_manager.py  language_dao.py  lottery_dao.py  pool.py  secure_ticket_dao.py  tag_dao.py  (+8 more)
docs/: COGS_REPAIR_PLAN.md  CROSS_PLATFORM_ECONOMY_PLAN.md  MINECRAFT_PLUGIN_ARCHITECTURE.md  PROJECT_STRUCTURE.md  QUICK_FIX_GUIDE.md  README.md  ZIENTIS_INTEGRATION_PLAN.md  index.md  performance-dashboard.html
minimal-deploy/: .env.example  README.md  bot.py  requirements.txt
scripts/: cleanup_debug_logs.py  create_cross_platform_tables.py  demo_performance_analysis.py  generate_final_report.py  load_test.py  local_format_fix.sh  monitor-sync.sh  performance_analyzer.py  setup-cron.sh  setup_local_ci.sh  sync-ptero.sh
shared/: cache_manager.py  config.py  db_optimizer.py  enums.py  logger.py  offline_mode.py  offline_mode_manager.py  prometheus_metrics.py
tests/: __init__.py  conftest.py
transcripts/: demo_ticket_0007.html  demo_ticket_0007.txt  ticket_0008_20250810_191124.html  ticket_0011_20250812_140717.html
web-ui/: .env.example  .gitignore  DISCORD-BOT-INTEGRATION.md  LOGIN-TEST-GUIDE.md  README-AUTO-CONNECTION.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig-Craig.tsbuildinfo  tsconfig.tsbuildinfo
(+544 files in other folders)
